syntax = "proto3";
package ozon.route256.postgres;
option csharp_namespace = "Ozon.Route256.Postgres.Grpc";

import "money.proto";

service OrderService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc GetStream (GetRequest) returns (stream GetStreamResponse);
}

message GetRequest {
  repeated int64 order_id = 1;
}

message GetResponse {
  repeated Order orders = 1;
}

message GetStreamResponse {
  Order order = 1;
}

message Order {
  int64 id = 1;
  OrderState state = 2;
  google.type.Money amount = 3;
  repeated Item items = 4;

  message Item {
    int64 sku_id = 1;
    int32 quantity = 2;
    google.type.Money price = 3;
  }
}

enum OrderState {
  ORDERSTATE_UNKNOWN = 0;
  ORDERSTATE_CREATED = 10;
  ORDERSTATE_PAID = 20;
  ORDERSTATE_BOXING = 30;
  ORDERSTATE_WAIT_FOR_PICKUP = 40;
  ORDERSTATE_IN_DELIVERY = 50;
  ORDERSTATE_WAIT_FOR_CLIENT = 60;
  ORDERSTATE_COMPLETED = 200;
  ORDERSTATE_CANCELLED = 300;
}
